src/Extrema/Extrema_POnSurf.cxx
@@ -17,13 +17,3 @@
 // and conditions governing the rights and limitations under the License.
 
 #include <Extrema_POnSurf.ixx>
-
-Extrema_POnSurf::Extrema_POnSurf () {}
-
-Extrema_POnSurf::Extrema_POnSurf ( const Standard_Real U, const Standard_Real V, const gp_Pnt& P) 
-{
-  myU = U;
-  myV = V;
-  myP = P;
-}
-
